--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <div class="sc">
 	<a href="index.html">Главная</a>
 	<a href="pac.html">Консльтации</a>
-	<a href="dz.html">Дз</a>
+	<a href="dz.html"><h2>Дз</h2></a>
 	<div class="sc1">
 		<a href="">Электроный дневник</a>
 		<a href="ob.html">Объявления</a>
