--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
 <div class="sc">
 	<a href="index.html">Главная</a>
 	<a href="pac.html">Консльтации</a>
-	<a href="dz.html"><h2>Дз</h2></a>
+	<a href="dz.html">Дз</a>
 	<div class="sc1">
 		<a href="">Электроный дневник</a>
 		<a href="ob.html">Объявления</a>
 	</div>
 </div>
+<br>
+<br>
        <pre><h2>
 Домашку выкладываем до 16:00 (стараемся)
 Дз обновлено 18.02 в 16:01
