--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<a href="pac.html">Консльтации</a>
 	<a href="dz.html">Дз</a>
 	<div class="sc1">
-		<a href="">Электроный дневник</a>
+		<a href="">Эл. дневник</a>
 		<a href="ob.html">Объявления</a>
 	</div>
 </div>
@@ -18,7 +18,7 @@
 <br>
        <pre><h2>
 Домашку выкладываем до 16:00 (стараемся)
-Дз обновлено 18.02 в 16:01
+Дз обновлено 18.02 в 16:03
 </h2>
 </pre>
 
