--- a/dex.html
+++ b/dex.html
@@ -8,7 +8,7 @@
     <a href="pac.html">Консльтации</a>
     <a href="dz.html">Дз</a>
     <div class="sc1">
-        <a href="">Электроный дневник</a>
+        <a href="">Эл. дневник</a>
         <a href="ob.html">Объявления</a>
     </div>
 </div>
