--- a/ob.html
+++ b/ob.html
@@ -11,7 +11,7 @@
 	<a href="pac.html">Консльтации</a>
 	<a href="dz.html">Дз</a>
 	<div class="sc1">
-		<a href="">Электроный дневник</a>
+		<a href="">Эл. дневник</a>
 		<a href="ob.html">Объявления</a>
 	</div>
 </div>
