--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <div class="sc">
 	<a href="index.html">Главная</a>
-	<a href="pac.html">Консльтации</a>
+	<a href="pac.html">Консультации</a>
 	<a href="dz.html">Дз</a>
 	<div class="sc1">
-		<a href="">Эл. дневник</a>
+		<a href="https://hs-open.ris61edu.ru/auth/login-page">Эл. дневник</a>
 		<a href="ob.html">Объявления</a>
 	</div>
 </div>
