--- a/ob.html
+++ b/ob.html
@@ -11,7 +11,7 @@
 	<a href="pac.html">Консультации</a>
 	<a href="dz.html">Дз</a>
 	<div class="sc1">
-		<a href="https://hs-open.ris61edu.ru/auth/login-page">Эл. дневник</a>
+		<a href="">Эл. дневник</a>
 		<a href="ob.html">Объявления</a>
 	</div>
 </div>
@@ -22,14 +22,17 @@
 		Объявления
 </p>
 </h1>
-
+<!--
 <h1>
 	<p align="center">
 Новостей нет
 </h1>
-
+-->
+<pre>
 <h2>
-	
+Внимание!
+Эл.дневник пока-что не работает из-за "Подключение не защищено".
 </h2>
+</pre>
 </body>
 </html>
