--- a/pac.html
+++ b/pac.html
@@ -10,7 +10,7 @@
     <a href="pac.html">Консультации</a>
     <a href="dz.html">Дз</a>
     <div class="sc1">
-        <a href="https://hs-open.ris61edu.ru/auth/login-page">Эл. дневник</a>
+        <a href="">Эл. дневник</a>
         <a href="ob.html">Объявления</a>
     </div>
 </div>
