--- a/ob.html
+++ b/ob.html
@@ -1,3 +1,4 @@
+<!-- Пока что === без тере -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -22,17 +23,17 @@
 		Объявления
 </p>
 </h1>
-<!--
+
 <h1>
 	<p align="center">
 Новостей нет
 </h1>
--->
+<!--
 <pre>
 <h2>
-Внимание!
-Эл.дневник пока-что не работает из-за "Подключение не защищено".
+
 </h2>
 </pre>
+-->
 </body>
 </html>
