--- a/dz.html
+++ b/dz.html
@@ -10,7 +10,7 @@
 	<a href="pac.html">Консультации</a>
 	<a href="dz.html">Дз</a>
 	<div class="sc1">
-		<a href="">Эл. дневник</a>
+		<a href="https://sh-open.ris61edu.ru">Эл. дневник</a>
 		<a href="ob.html">Объявления</a>
 	</div>
 </div>
