--- a/dz.html
+++ b/dz.html
@@ -23,7 +23,7 @@
 </h1>
 <p align="left">
     <!-- Тут меняй!!!!! -->
-<h2>Неделя: 15-20 марта</h2>
+<h2>Неделя: 1-3 апреля</h2>
 
 <table border="5" width="100%" cellpadding="4" cellspacing="0">
 
