--- a/dz.html
+++ b/dz.html
@@ -47,7 +47,7 @@
 
 <tr>
 
-<th>Родной язык</th><th></th><th></th><th></th><th></th><th></th><th></th>
+<th>Родной язык</th><th></th><th></th><th></th><th></th><th>п. 24 упр. 238,240,244</th><th></th>
 
 </tr>
 
