--- a/dz.html
+++ b/dz.html
@@ -41,7 +41,7 @@
    
 <tr>
 
-<th>Литература</th><th></th><th></th><th></th><th></th><th></th><th></th>
+<th>Литература</th><th></th><th></th><th></th><th></th><th></th><th>с. 133-135 анализ</th>
 
 </tr>
 
