--- a/dz.html
+++ b/dz.html
@@ -35,7 +35,7 @@
        
 <tr>
 
-<th>Русский язык</th><th></th><th></th><th>п. 62 упр. 757</th><th>Самостоятельная раб. Принисти тет. по конспектам упр. 763,772</th><th></th><th>п. 65 упр.767</th>
+<th>Русский язык</th><th></th><th></th><th>п. 62 упр. 757</th><th>С.раб. Принисти тет. по конспектам упр. 763,772</th><th></th><th>п. 65 упр.767</th>
    
 </tr>
    
