--- a/dz.html
+++ b/dz.html
@@ -35,13 +35,13 @@
        
 <tr>
 
-<th>Русский язык</th><th></th><th></th><th></th><th>упр796 уст п794 чертить</th><th></th><th></th>
+<th>Русский язык</th><th></th><th></th><th></th><th>упр796 уст п794 чертить</th><th></th><th>к/р по всем темам</th>
    
 </tr>
    
 <tr>
 
-<th>Литература</th><th></th><th></th><th></th><th>к/р по васюткину озеру, Робинзона крузо, тома сойера</th><th></th><th></th>
+<th>Литература</th><th></th><th></th><th></th><th>к/р по васюткину озеру, Робинзона крузо, тома сойера</th><th></th><th>хоббит туда и обратно</th>
 
 </tr>
 
