--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <br>
        <pre><h2>
 Домашку выкладываем до 16:00 (стараемся)
-Дз обновлено 25.05 в 16:18
+Дз обновлено  в 
 </h2>
 </pre>
 
@@ -30,7 +30,7 @@
 <p align="left">
 
 <table border="5" width="100%" cellpadding="4" cellspacing="0">
-    <tr>
+<!--     <tr>
         <th>Время</th><th>Понедельник</th><th>Вторник</th><th>Среда</th><th>Четверг</th><th>Пятница</th><th>Суббота</th>
     </tr>
     <tr>
@@ -50,7 +50,8 @@
     </tr>
     <tr>
         <th>12:40-13:20</th><th>Русский язык</th><th></th><th>География</th><th>История</th><th></th><th></th>
-    </tr>
+    </tr> -->
 </table>
+<p align="center"><h1><p align="center">Нет заполняющих</p></h1>
 </body>
 </html>
